
Changelog:
==========

v1.04

- Changes / Features

New option to enable video copy on ps3
RAW images thumbnail support (CR2/CRW/PEF/NEF/ORF/SRF/MRW/DNG/ARW/RAF)
New translations: Spanish (thanks to Jose from www.playstationhoy.com), Dutch (thanks to Vincent Meylof), German (thanks to Jeuki), Russian (thanks to Peter Klassen), Polish (thanks to Maciej Bocian), Greek (thanks to Alexander Polichroniadis), Portuguese (thanks to Hugo Sousa) and Swedish (thanks to Dusan Ilic)

- Fixes

Fixed regression with PicasaWeb images feed
Transcode buffer wasn't fully released after end of video
Fixed bug with shared folders selection on Windows
Updated ffmpeg/mplayer/mencoder builds on Windows (slight speedup for singlecore on H264 with mencoder)

v1.03

- Changes / Features

Customize encoding parameters (along with default ones) for any given container/codec/property combination (purpose: A/V sync, playback issues, and tweaking for advanced users)
Ability to select networking interface
OSX 10.4 Tiger support (Intel only)
Settings reorganization
M4V now streamed by default, you have to enter the #Transcoded# folder to force the transcode (like AVI files)
WMA now transcoded by default
Italian localization
WINDOWS ONLY: Use (only with 720p/1080p H264 content) an experimental mencoder build for multicores : http://code.google.com/soc/2008/ffmpeg/appinfo.html?csaid=9FD2BF705A5D5DBB
New OSX icon (thanks to Jakob Karlsson)
Added a "Skip/Force transcode extensions" option added if default settings don't suit you
Possibility to only remux AC3 audio tracks and not reencoded them

- Fixes

Default platform charset issue
Transcode buffer optimization on Windows
Application crash on Windows when too many widechars filenames were parsed
Audio tracks sorted by track number (if present) in media library
Better filenames/subtitles management (m2ts/ts/dvr-ms issues, comas, widechars, etc.)
External subtitles not always loaded, again
DVD images are listed in the media library