@@ -7,15 +7,19 @@ v1.04
 - Changes / Features
 
 New option to enable video copy on ps3
-RAW images thumbnail support (CR2/CRW/PEF/NEF/ORF/SRF/MRW/DNG/ARW/RAF)
+RAW images thumbnail support: CR2/CRW/PEF/NEF/ORF/SRF/MRW/DNG/ARW/RAF
 New translations: Spanish (thanks to Jose from www.playstationhoy.com), Dutch (thanks to Vincent Meylof), German (thanks to Jeuki), Russian (thanks to Peter Klassen), Polish (thanks to Maciej Bocian), Greek (thanks to Alexander Polichroniadis), Portuguese (thanks to Hugo Sousa) and Swedish (thanks to Dusan Ilic)
+New extensions supported: SHN/M2V/M2P
 
 - Fixes
 
 Fixed regression with PicasaWeb images feed
 Transcode buffer wasn't fully released after end of video
 Fixed bug with shared folders selection on Windows
+Fixed periodic alive messages sent to ps3
+Better dvr-ms media info retrieval
 Updated ffmpeg/mplayer/mencoder builds on Windows (slight speedup for singlecore on H264 with mencoder)
+Buffer issue with transcoded audio files lasting more than 10 minutes
 
 v1.03
 
